	* Fix bug smarty extends chemin relatif de la classe smarty 3
	* Fix bug chemin vers le dossier des plugins (// a la place de /)
	* Remplacement de $_SERVER['DOCUMENT_ROOT'] dans le chemin des plugins
	* Fix bug smarty trigger_error smarty supprimer
	* Ajout de méthode pour manipuler smarty 3 avec l'API (frontend et backend)
	* Update minify avec la dernière version du svn (r429)
	
Stable 2.3.40
	* Modification du système de sitemap 
		=> Ajout de la création du sitemap google images
		=> Ajout du sitemap index pour la relation avec les sitemaps enfants
		=> Le sitemap des URLS devient sitemap-url.xml
	* Ajout des dates de publication dans les pages CMS + produits du catalogue
	* Upgrade minify 2.1.3 => 2.1.4 beta
		- Nouvelle configuration sans $_SERVER['DOCUMENT_ROOT']
		- Aucune limite du nombre de fichier js, css dans minify
	* Modification pour la création du fichier de configuration (config.php) avec l'assistant d'installation
		=> Ecriture en dur du chemin vers les logs
	* Fix bug dans la création du fichier LOG pour les requêtes
	* Nouvelle installation des tables mysql via fichier db.sql
	* Modification graphique (h1,p,...) dans le système d'installation
	* Correction des chemins dans le système d'installation en utilisant magixglobal
	* Correction des requête ajax dans l'assistant d'installation
	* Suppression du fichiers install.php => remplacement par config.php
	* ajout de fonctions pour installer des tables mysql
	* Remplacement du système d'installation actuel des tables mysql avec les nouvelles fonctions
	* Fix bug chemin des plugins dans l'administration
	* Intégration du système d'installation des tables mysql dans les plugins
	* Ajout du système de notification d'installation des tables MYSQL d'un plugin
	* Ajout du système de déplacement des pages CMS
	* Ajout du système de déplacement des fiches catalogue
	* Ajout du système de copie des fiches catalogue
	* Ajout de la fenêtre modal pour les liens des pages CMS